--- a/index.html
+++ b/index.html
@@ -3,62 +3,81 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MasterUno Real Rules</title>
+    <title>MasterUno Ultimate</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
 </head>
 <body>
     <div id="toast" class="toast hidden"></div>
-
-    <div id="loginScreen" class="screen">
-        <div class="glass-box">
-            <h1 class="logo-main">MASTER<span>UNO</span></h1>
-            <input type="text" id="nickInput" placeholder="Tuo Nickname...">
-            <button class="btn-glow" onclick="game.login()">ENTRA</button>
+    <div id="anim-layer"></div> <div id="loginScreen" class="screen">
+        <div class="panel">
+            <h1 class="logo">MASTER<span>UNO</span></h1>
+            <div class="input-group">
+                <input type="text" id="nickInput" placeholder="Inserisci il tuo nome...">
+                <button class="btn-primary" onclick="game.login()">ENTRA NEL GIOCO</button>
+            </div>
         </div>
     </div>
 
     <div id="menuScreen" class="screen hidden">
-        <div class="main-box">
+        <div class="panel">
             <h2 id="welcomeText"></h2>
-            <div class="id-badge" onclick="game.copyId()">ID: <b id="myId">---</b></div>
-            <button class="btn-main" onclick="game.startGame()">GIOCA ORA</button>
-            <button class="btn-sub" onclick="game.goTo('settingsScreen')">IMPOSTAZIONI</button>
+            <div class="id-container" onclick="game.copyId()">
+                <small>IL TUO ID (CLICCA PER COPIARE)</small>
+                <b id="myId">---</b>
+            </div>
+            <div class="menu-buttons">
+                <button class="btn-primary" onclick="game.startGame()">PARTITA LOCALE</button>
+                <div class="join-box">
+                    <input type="text" id="joinId" placeholder="ID AMICO...">
+                    <button class="btn-secondary" onclick="game.connectToPeer()">SFIDA</button>
+                </div>
+                <button class="btn-ghost" onclick="game.goTo('settingsScreen')">REGOLAMENTO</button>
+            </div>
         </div>
     </div>
 
     <div id="settingsScreen" class="screen hidden">
-        <div class="main-box">
-            <h2>REGOLE</h2>
-            <div class="row">Avversari: <select id="playerLimit"><option value="2">1</option><option value="3">2</option><option value="4" selected>3</option></select></div>
-            <div class="row">Regola 0-7: <input type="checkbox" id="rule07" checked></div>
-            <button class="btn-main" onclick="game.goTo('menuScreen')">SALVA</button>
+        <div class="panel">
+            <h2>IMPOSTAZIONI</h2>
+            <div class="setting-row">
+                <span>Giocatori</span>
+                <select id="playerLimit"><option value="2">2</option><option value="3">3</option><option value="4" selected>4</option></select>
+            </div>
+            <div class="setting-row">
+                <span>Pesca a strascico</span>
+                <label class="switch"><input type="checkbox" id="drawUntilPlay" checked><span class="slider"></span></label>
+            </div>
+            <div class="setting-row">
+                <span>Regola 0-7</span>
+                <label class="switch"><input type="checkbox" id="rule07" checked><span class="slider"></span></label>
+            </div>
+            <button class="btn-primary" onclick="game.goTo('menuScreen')">SALVA</button>
         </div>
     </div>
 
     <div id="gameArea" class="screen hidden">
-        <div id="turnIndicator">TURNO...</div>
+        <div id="turnIndicator">CARICAMENTO...</div>
         
-        <div id="bot-left" class="player-slot side"></div>
+        <div id="bot-left" class="player-slot side left"></div>
         <div id="bot-top" class="player-slot top"></div>
-        <div id="bot-right" class="player-slot side"></div>
+        <div id="bot-right" class="player-slot side right"></div>
 
-        <div class="table-center">
-            <div id="directionRing"></div>
+        <div class="table">
             <div id="deck" class="card card-back" onclick="game.userDraw()">
                 <div class="master-back">MASTER<span>UNO</span></div>
             </div>
-            <div id="discard"></div>
+            <div id="discard-pile"></div>
         </div>
 
-        <div class="player-bottom">
-            <div class="my-info">
+        <div class="player-area">
+            <div class="player-meta">
                 <div id="myEmoji" class="emoji-bubble hidden"></div>
-                <div id="myBadge" class="status-badge">TU: 7</div>
-                <div class="chat-bar">
+                <div id="myBadge" class="badge">TU: 7</div>
+                <div class="emoji-bar">
                     <span onclick="game.sendEmoji('😂')">😂</span>
-                    <span onclick="game.sendEmoji('🤡')">🤡</span>
                     <span onclick="game.sendEmoji('😡')">😡</span>
+                    <span onclick="game.sendEmoji('🤡')">🤡</span>
                 </div>
             </div>
             <div id="myHand" class="hand"></div>
@@ -66,8 +85,8 @@
     </div>
 
     <div id="colorPicker" class="overlay hidden">
-        <div class="picker-box">
-            <h3>Scegli Colore</h3>
+        <div class="picker-card">
+            <h3>SCEGLI UN COLORE</h3>
             <div class="picker-grid">
                 <div onclick="game.setWildColor('red')" class="c-choice red"></div>
                 <div onclick="game.setWildColor('blue')" class="c-choice blue"></div>
@@ -76,7 +95,5 @@
             </div>
         </div>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
