--- a/index.html
+++ b/index.html
@@ -3,80 +3,67 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MasterUno Ultimate</title>
+    <title>MasterUno Pro</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
 </head>
 <body>
-    <div id="toast" class="toast hidden"></div>
-    <div id="anim-layer"></div> <div id="loginScreen" class="screen">
-        <div class="panel">
-            <h1 class="logo">MASTER<span>UNO</span></h1>
-            <div class="input-group">
-                <input type="text" id="nickInput" placeholder="Inserisci il tuo nome...">
-                <button class="btn-primary" onclick="game.login()">ENTRA NEL GIOCO</button>
-            </div>
-        </div>
-    </div>
+    <div id="toast" class="toast hidden">ID COPIATO!</div>
 
-    <div id="menuScreen" class="screen hidden">
-        <div class="panel">
-            <h2 id="welcomeText"></h2>
-            <div class="id-container" onclick="game.copyId()">
-                <small>IL TUO ID (CLICCA PER COPIARE)</small>
-                <b id="myId">---</b>
-            </div>
-            <div class="menu-buttons">
-                <button class="btn-primary" onclick="game.startGame()">PARTITA LOCALE</button>
-                <div class="join-box">
-                    <input type="text" id="joinId" placeholder="ID AMICO...">
-                    <button class="btn-secondary" onclick="game.connectToPeer()">SFIDA</button>
+    <div id="menuScreen" class="screen">
+        <div class="gold-frame">
+            <div class="content">
+                <h1 id="mainTitle">MASTER UNO</h1>
+                <h2 id="subTitle">HAI VINTO!</h2>
+                <p id="winnerName">Complimenti, [NomeGiocatore]!</p>
+                
+                <div class="input-area">
+                    <input type="text" id="nickInput" placeholder="Tuo Nickname..." class="glass-input">
+                    <button class="btn-gold" onclick="game.copyId()">COPIA IL TUO ID</button>
+                    <input type="text" id="joinId" placeholder="Inserisci ID Amico" class="glass-input">
                 </div>
-                <button class="btn-ghost" onclick="game.goTo('settingsScreen')">REGOLAMENTO</button>
+
+                <div class="button-stack">
+                    <button class="btn-grey" onclick="game.connectToPeer()">CONNETTITI E GIOCA</button>
+                    <button class="btn-black" onclick="game.goTo('settingsScreen')">IMPOSTAZIONI</button>
+                    <button class="btn-yellow" onclick="game.startGame()">NUOVA PARTITA</button>
+                </div>
             </div>
         </div>
+        <div id="confetti"></div>
     </div>
 
     <div id="settingsScreen" class="screen hidden">
-        <div class="panel">
-            <h2>IMPOSTAZIONI</h2>
-            <div class="setting-row">
-                <span>Giocatori</span>
-                <select id="playerLimit"><option value="2">2</option><option value="3">3</option><option value="4" selected>4</option></select>
+        <div class="gold-frame mini">
+            <div class="content">
+                <h2>REGOLAMENTO</h2>
+                <div class="row">Pesca a strascico: <input type="checkbox" id="drawUntil" checked></div>
+                <div class="row">Somma +2/+4: <b>Sempre On</b></div>
+                <button class="btn-yellow" onclick="game.goTo('menuScreen')">TORNA</button>
             </div>
-            <div class="setting-row">
-                <span>Pesca a strascico</span>
-                <label class="switch"><input type="checkbox" id="drawUntilPlay" checked><span class="slider"></span></label>
-            </div>
-            <div class="setting-row">
-                <span>Regola 0-7</span>
-                <label class="switch"><input type="checkbox" id="rule07" checked><span class="slider"></span></label>
-            </div>
-            <button class="btn-primary" onclick="game.goTo('menuScreen')">SALVA</button>
         </div>
     </div>
 
     <div id="gameArea" class="screen hidden">
-        <div id="turnIndicator">CARICAMENTO...</div>
+        <div id="turnIndicator">TURNO DI...</div>
         
-        <div id="bot-left" class="player-slot side left"></div>
+        <div id="bot-left" class="player-slot side"></div>
         <div id="bot-top" class="player-slot top"></div>
-        <div id="bot-right" class="player-slot side right"></div>
+        <div id="bot-right" class="player-slot side"></div>
 
-        <div class="table">
+        <div class="table-center">
             <div id="deck" class="card card-back" onclick="game.userDraw()">
                 <div class="master-back">MASTER<span>UNO</span></div>
             </div>
-            <div id="discard-pile"></div>
+            <div id="discard"></div>
         </div>
 
-        <div class="player-area">
-            <div class="player-meta">
+        <div class="player-bottom">
+            <div class="my-info">
                 <div id="myEmoji" class="emoji-bubble hidden"></div>
-                <div id="myBadge" class="badge">TU: 7</div>
-                <div class="emoji-bar">
+                <div id="myBadge" class="status-badge">TU: 7</div>
+                <div class="chat-mini">
                     <span onclick="game.sendEmoji('😂')">😂</span>
-                    <span onclick="game.sendEmoji('😡')">😡</span>
                     <span onclick="game.sendEmoji('🤡')">🤡</span>
                 </div>
             </div>
@@ -85,8 +72,7 @@
     </div>
 
     <div id="colorPicker" class="overlay hidden">
-        <div class="picker-card">
-            <h3>SCEGLI UN COLORE</h3>
+        <div class="picker-box">
             <div class="picker-grid">
                 <div onclick="game.setWildColor('red')" class="c-choice red"></div>
                 <div onclick="game.setWildColor('blue')" class="c-choice blue"></div>
@@ -95,5 +81,7 @@
             </div>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
