--- a/index.html
+++ b/index.html
@@ -3,56 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MasterUno Pro</title>
+    <title>MasterUno Clean</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://unpkg.com/peerjs@1.5.2/dist/peerjs.min.js"></script>
 </head>
 <body>
-    <div id="toast" class="toast hidden">ID COPIATO!</div>
-
-    <div id="loginScreen" class="screen">
+    <div id="loginScreen" class="screen active">
         <div class="gold-frame">
             <div class="content">
                 <h1 class="gold-text">MASTER UNO</h1>
-                <p style="color: #888; margin-bottom: 20px;">Inserisci il tuo nome per iniziare</p>
                 <input type="text" id="nickInput" placeholder="Tuo Nickname..." class="glass-input">
-                <button class="btn-yellow" onclick="game.doLogin()">ENTRA NEL MENU</button>
+                <button class="btn-yellow" onclick="game.doLogin()">ENTRA</button>
             </div>
         </div>
     </div>
 
-    <div id="menuScreen" class="screen hidden">
+    <div id="menuScreen" class="screen">
         <div class="gold-frame">
             <div class="content">
-                <h1 id="mainTitle">MASTER UNO</h1>
-                <h2 id="menuUserTitle">BENVENUTO!</h2>
-                
-                <div class="input-area">
-                    <button class="btn-gold-flat" onclick="game.copyId()">COPIA IL TUO ID: <span id="displayId">---</span></button>
-                    <input type="text" id="joinId" placeholder="Inserisci ID Amico" class="glass-input">
-                </div>
-
-                <div class="button-stack">
-                    <button class="btn-grey" onclick="game.connectToPeer()">CONNETTITI E GIOCA</button>
-                    <button class="btn-black" onclick="game.goTo('settingsScreen')">IMPOSTAZIONI</button>
-                    <button class="btn-yellow" onclick="game.startGame()">NUOVA PARTITA</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="winScreen" class="screen hidden">
-        <div class="gold-frame win-anim">
-            <div class="content">
                 <h1 class="gold-text">MASTER UNO</h1>
-                <h2 id="winStatus">HAI VINTO!</h2>
-                <p id="winMessage">Complimenti!</p>
-                <button class="btn-yellow" onclick="game.goTo('menuScreen')">TORNA AL MENU</button>
+                <h2 id="menuUserTitle">MENU</h2>
+                <div class="button-stack">
+                    <button class="btn-yellow" onclick="game.startGame()">NUOVA PARTITA</button>
+                    <button class="btn-black" onclick="game.goTo('settingsScreen')">IMPOSTAZIONI</button>
+                </div>
             </div>
         </div>
     </div>
 
-    <div id="settingsScreen" class="screen hidden">
+    <div id="settingsScreen" class="screen">
         <div class="gold-frame">
             <div class="content">
                 <h2 class="gold-text">REGOLE</h2>
@@ -60,50 +38,37 @@
                     <span>Pesca a strascico</span>
                     <input type="checkbox" id="drawUntil" checked>
                 </div>
-                <div class="setting-item">
-                    <span>Avversari (Bot)</span>
-                    <select id="botCount">
-                        <option value="1">1</option>
-                        <option value="2" selected>2</option>
-                        <option value="3">3</option>
-                    </select>
-                </div>
-                <button class="btn-yellow" style="margin-top:20px;" onclick="game.goTo('menuScreen')">SALVA</button>
+                <button class="btn-yellow" onclick="game.goTo('menuScreen')">SALVA</button>
             </div>
         </div>
     </div>
 
-    <div id="gameArea" class="screen hidden">
-        <div id="turnIndicator">TURNO...</div>
+    <div id="gameArea" class="screen game-bg">
+        <div id="turnIndicator">CARICAMENTO...</div>
+        
         <div id="bot-left" class="player-slot side"></div>
         <div id="bot-top" class="player-slot top"></div>
         <div id="bot-right" class="player-slot side"></div>
+
         <div class="table-center">
             <div id="deck" class="card card-back" onclick="game.userDraw()">
                 <div class="master-back">MASTER<span>UNO</span></div>
             </div>
             <div id="discard"></div>
         </div>
+
         <div class="player-bottom">
-            <div class="my-info">
-                <div id="myEmoji" class="emoji-bubble hidden"></div>
-                <div id="myBadge" class="status-badge">TU: 7</div>
-                <div class="chat-mini">
-                    <span onclick="game.sendEmoji('😂')">😂</span>
-                    <span onclick="game.sendEmoji('🤡')">🤡</span>
-                </div>
-            </div>
+            <div id="myBadge" class="status-badge">TU: 7</div>
             <div id="myHand" class="hand"></div>
         </div>
     </div>
 
-    <div id="colorPicker" class="overlay hidden">
-        <div class="picker-box">
-            <div class="picker-grid">
-                <div onclick="game.setWildColor('red')" class="c-choice red"></div>
-                <div onclick="game.setWildColor('blue')" class="c-choice blue"></div>
-                <div onclick="game.setWildColor('green')" class="c-choice green"></div>
-                <div onclick="game.setWildColor('yellow')" class="c-choice yellow"></div>
+    <div id="winScreen" class="screen win-overlay">
+        <div class="gold-frame">
+            <div class="content">
+                <h1 id="winStatus">VITTORIA!</h1>
+                <p id="winMessage"></p>
+                <button class="btn-yellow" onclick="location.reload()">GIOCA ANCORA</button>
             </div>
         </div>
     </div>
