--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h2 id="menuUserTitle">MENU</h2>
                 <div class="button-stack">
                     <button class="btn-yellow" onclick="game.startGame()">NUOVA PARTITA</button>
-                    <button class="btn-black" onclick="game.goTo('settingsScreen')">IMPOSTAZIONI</button>
+                    <button class="btn-black" onclick="game.goTo('settingsScreen')">REGOLE</button>
                 </div>
             </div>
         </div>
@@ -47,7 +47,6 @@
         <div id="turnIndicator">CARICAMENTO...</div>
         
         <div id="bot-left" class="player-slot side"></div>
-        <div id="bot-top" class="player-slot top"></div>
         <div id="bot-right" class="player-slot side"></div>
 
         <div class="table-center">
