--- a/index.html
+++ b/index.html
@@ -11,15 +11,26 @@
         <div class="glass-box">
             <h1 class="neon-title">MASTER<span>UNO</span></h1>
             <div class="input-area">
-                <input type="text" id="nickInput" placeholder="Inserisci il tuo Nick..." maxlength="12">
-                <button class="glow-btn" onclick="game.doLogin()">ENTRA NELL'ARENA</button>
+                <input type="text" id="nickInput" placeholder="Nickname..." maxlength="12">
+                <button class="glow-btn" onclick="game.doLogin()">CONFERMA</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="menuScreen" class="screen">
+        <div class="glass-box menu-box">
+            <h2 id="welcomeText">CIAO, PLAYER</h2>
+            <div class="menu-buttons">
+                <button class="menu-btn primary" onclick="game.startGame()">GIOCA ORA</button>
+                <button class="menu-btn" onclick="alert('Regole: Colore su colore, numero su numero. Wild cambia colore!')">REGOLE</button>
+                <button class="menu-btn" onclick="game.goTo('loginScreen')">ESCI</button>
             </div>
         </div>
     </div>
 
     <div id="gameArea" class="screen game-bg">
         <div class="table-overlay"></div>
-        <div id="turnIndicator">CARICAMENTO...</div>
+        <div id="turnIndicator">TURNO DI...</div>
 
         <div class="bot-container left">
             <div id="bot-left" class="bot-hand"></div>
@@ -43,8 +54,7 @@
                     <div class="u-text">UNO</div>
                 </div>
             </div>
-            <div id="discard-pile">
-                </div>
+            <div id="discard-pile"></div>
         </div>
 
         <div class="player-zone">
@@ -53,13 +63,6 @@
                 <span id="cardCount" class="badge">7</span>
             </div>
             <div id="myHand" class="hand-container"></div>
-        </div>
-    </div>
-
-    <div id="winScreen" class="screen win-overlay">
-        <div class="glass-box">
-            <h1 id="winStatus">VITTORIA!</h1>
-            <button class="glow-btn" onclick="location.reload()">GIOCA ANCORA</button>
         </div>
     </div>
 
