--- a/index.html
+++ b/index.html
@@ -3,70 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MasterUno Pro</title>
+    <title>MasterUno Ultimate</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="loginScreen" class="screen active">
-        <div class="glass-container">
+        <div class="glass-box">
             <h1 class="neon-title">MASTER<span>UNO</span></h1>
-            <input type="text" id="nickInput" placeholder="Inserisci Nickname..." class="glass-input">
-            <button class="glow-btn" onclick="game.goTo('menuScreen')">ENTRA</button>
+            <input type="text" id="nickInput" placeholder="Nickname..." class="glass-input">
+            <button class="btn-yellow" onclick="game.goTo('menuScreen')">ENTRA</button>
         </div>
     </div>
 
     <div id="menuScreen" class="screen">
-        <div class="glass-container">
-            <h2 class="neon-subtitle">MENU PRINCIPALE</h2>
+        <div class="glass-box">
+            <h2 class="gold-text">MENU</h2>
             <div class="btn-group">
-                <button class="menu-btn primary" onclick="game.startGame()">NUOVA PARTITA</button>
-                <div class="code-box">
-                    <input type="text" id="friendCode" placeholder="Codice Amico..." class="glass-input small">
-                    <button class="menu-btn" onclick="game.copyCode()">COPIA</button>
+                <button class="btn-yellow" onclick="game.startGame()">NUOVA PARTITA</button>
+                <div class="code-row">
+                    <input type="text" id="joinCode" placeholder="Codice..." class="glass-input-small">
+                    <button class="btn-yellow-small" onclick="game.copyCode()">COPIA</button>
                 </div>
-                <button class="menu-btn" onclick="game.goTo('settingsScreen')">IMPOSTAZIONI</button>
+                <button class="btn-black" onclick="game.goTo('settingsScreen')">IMPOSTAZIONI</button>
             </div>
         </div>
     </div>
 
     <div id="settingsScreen" class="screen">
-        <div class="glass-container">
-            <h2 class="neon-subtitle">REGOLE E SETUP</h2>
-            <div class="settings-list">
-                <div class="setting-row">
-                    <span>Giocatori</span>
-                    <select id="playerCount">
-                        <option value="2">1 VS 1</option>
-                        <option value="3">3 Giocatori</option>
-                        <option value="4" selected>4 Giocatori</option>
-                    </select>
-                </div>
-                <div class="setting-row">
-                    <span>Regola 0 e 7</span>
-                    <input type="checkbox" id="rule07" checked>
-                </div>
+        <div class="glass-box">
+            <h2 class="gold-text">REGOLE</h2>
+            <div class="setting-row">
+                <span>Giocatori</span>
+                <select id="playerCount">
+                    <option value="2">1 VS 1</option>
+                    <option value="3">3 Giocatori</option>
+                    <option value="4" selected>4 Giocatori</option>
+                </select>
             </div>
-            <button class="glow-btn" onclick="game.goTo('menuScreen')">SALVA</button>
+            <div class="setting-row">
+                <span>Regola 0-7</span>
+                <input type="checkbox" id="rule07" checked>
+            </div>
+            <button class="btn-yellow" onclick="game.goTo('menuScreen')">SALVA</button>
         </div>
     </div>
 
     <div id="gameArea" class="screen game-bg">
         <div id="turnIndicator">TURNO DI...</div>
-        <div id="stackValue"></div>
-        
+        <div id="stackInfo"></div>
+
         <div id="bot-left" class="slot side"></div>
         <div id="bot-top" class="slot top"></div>
         <div id="bot-right" class="slot side"></div>
 
-        <div class="center">
-            <div id="deck" class="card card-back" onclick="game.userDraw()">
-                <div class="m-back">MASTER<span>UNO</span></div>
+        <div class="table-center">
+            <div id="deck" onclick="game.userDraw()">
+                <div class="card-stack-effect"></div>
+                <div class="card card-back">
+                    <div class="m-back">MASTER<span>UNO</span></div>
+                </div>
             </div>
-            <div id="discard"></div>
+            <div id="discard-area"></div>
+        </div>
+
+        <div id="colorPicker" class="color-picker-overlay">
+            <div class="color-btn red" onclick="game.selectColor('red')"></div>
+            <div class="color-btn blue" onclick="game.selectColor('blue')"></div>
+            <div class="color-btn green" onclick="game.selectColor('green')"></div>
+            <div class="color-btn yellow" onclick="game.selectColor('yellow')"></div>
         </div>
 
         <div class="player-zone">
-            <div id="myBadge" class="p-badge">TU: 7</div>
+            <div id="myBadge" class="p-tag">TU: 7</div>
             <div id="myHand" class="hand"></div>
         </div>
     </div>
