--- a/index.html
+++ b/index.html
@@ -3,79 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>MasterUno Ultimate</title>
+    <title>MasterUno Ultimate Elite</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
+
+    <div id="toast-container"></div>
+
     <div id="loginScreen" class="screen active">
-        <div class="glass-box">
-            <h1 class="neon-title">MASTER<span>UNO</span></h1>
-            <input type="text" id="nickInput" placeholder="Nickname..." class="glass-input">
-            <button class="btn-yellow" onclick="game.goTo('menuScreen')">ENTRA</button>
+        <div class="auth-card">
+            <h1 class="logo">MASTER<span>UNO</span></h1>
+            <div class="input-group">
+                <input type="text" id="nickInput" placeholder="Nickname">
+                <input type="password" id="passInput" placeholder="Password">
+            </div>
+            <button class="btn-main" onclick="game.doLogin()">ACCEDI</button>
         </div>
     </div>
 
     <div id="menuScreen" class="screen">
-        <div class="glass-box">
-            <h2 class="gold-text">MENU</h2>
-            <div class="btn-group">
-                <button class="btn-yellow" onclick="game.startGame()">NUOVA PARTITA</button>
-                <div class="code-row">
-                    <input type="text" id="joinCode" placeholder="Codice..." class="glass-input-small">
-                    <button class="btn-yellow-small" onclick="game.copyCode()">COPIA</button>
+        <div class="auth-card main-menu">
+            <button class="settings-trigger" onclick="game.toggleSettings()"><i class="fas fa-cog"></i></button>
+            <h2 id="welcomeMsg">BENTORNATO</h2>
+            <div class="menu-actions">
+                <button class="btn-main" onclick="game.startGame()">PARTITA RAPIDA</button>
+                <div class="invite-section">
+                    <p>Invita amici:</p>
+                    <div class="code-display" onclick="game.copyRoomCode()">
+                        <span id="roomCodeDisplay">G7K2X9</span>
+                        <i class="fas fa-copy"></i>
+                    </div>
                 </div>
-                <button class="btn-black" onclick="game.goTo('settingsScreen')">IMPOSTAZIONI</button>
             </div>
         </div>
     </div>
 
-    <div id="settingsScreen" class="screen">
-        <div class="glass-box">
-            <h2 class="gold-text">REGOLE</h2>
-            <div class="setting-row">
-                <span>Giocatori</span>
-                <select id="playerCount">
-                    <option value="2">1 VS 1</option>
-                    <option value="3">3 Giocatori</option>
-                    <option value="4" selected>4 Giocatori</option>
-                </select>
+    <div id="settingsOverlay" class="overlay">
+        <div class="settings-modal">
+            <h3><i class="fas fa-sliders-h"></i> IMPOSTAZIONI GIOCO</h3>
+            <div class="settings-content">
+                <div class="setting-item">
+                    <label>Giocatori Totali (Max 4)</label>
+                    <select id="setPlayers">
+                        <option value="2">2 Giocatori</option>
+                        <option value="3">3 Giocatori</option>
+                        <option value="4" selected>4 Giocatori</option>
+                    </select>
+                </div>
+                <div class="setting-item toggle">
+                    <label>Regola 0-7 <span>(Scambio mazzi)</span></label>
+                    <input type="checkbox" id="set07" checked>
+                </div>
+                <div class="setting-item toggle">
+                    <label>Pesca a Strascico <span>(Pesca finché non giochi)</span></label>
+                    <input type="checkbox" id="setStrascico">
+                </div>
+                <div class="setting-item toggle">
+                    <label>Scarto Multiplo <span>(Stesso numero insieme)</span></label>
+                    <input type="checkbox" id="setMulti" checked>
+                </div>
             </div>
-            <div class="setting-row">
-                <span>Regola 0-7</span>
-                <input type="checkbox" id="rule07" checked>
-            </div>
-            <button class="btn-yellow" onclick="game.goTo('menuScreen')">SALVA</button>
+            <button class="btn-main" onclick="game.toggleSettings()">SALVA E CHIUDI</button>
         </div>
     </div>
 
     <div id="gameArea" class="screen game-bg">
-        <div id="turnIndicator">TURNO DI...</div>
-        <div id="stackInfo"></div>
+        <div id="activePlayerBox">TURNO: <span id="turnName">---</span></div>
+        <div id="stackBadge"></div>
 
-        <div id="bot-left" class="slot side"></div>
-        <div id="bot-top" class="slot top"></div>
-        <div id="bot-right" class="slot side"></div>
+        <div class="bot-slots">
+            <div id="slot-1" class="bot-pos"></div>
+            <div id="slot-2" class="bot-pos"></div>
+            <div id="slot-3" class="bot-pos"></div>
+        </div>
 
-        <div class="table-center">
+        <div class="table">
             <div id="deck" onclick="game.userDraw()">
-                <div class="card-stack-effect"></div>
-                <div class="card card-back">
+                <div class="card card-back deck-shadow">
                     <div class="m-back">MASTER<span>UNO</span></div>
                 </div>
             </div>
-            <div id="discard-area"></div>
+            <div id="discard-pile"></div>
         </div>
 
-        <div id="colorPicker" class="color-picker-overlay">
-            <div class="color-btn red" onclick="game.selectColor('red')"></div>
-            <div class="color-btn blue" onclick="game.selectColor('blue')"></div>
-            <div class="color-btn green" onclick="game.selectColor('green')"></div>
-            <div class="color-btn yellow" onclick="game.selectColor('yellow')"></div>
+        <div id="chatSystem">
+            <div id="emojiPanel" class="hidden">
+                <span onclick="game.sendEmoji('🔥')">🔥</span>
+                <span onclick="game.sendEmoji('😎')">😎</span>
+                <span onclick="game.sendEmoji('😭')">😭</span>
+                <span onclick="game.sendEmoji('🃏')">🃏</span>
+            </div>
+            <button id="chatBtn" onclick="game.toggleEmoji()"><i class="fas fa-smile"></i></button>
         </div>
 
-        <div class="player-zone">
-            <div id="myBadge" class="p-tag">TU: 7</div>
+        <div class="player-hud">
+            <div class="player-info-bar">
+                <span id="myNickDisplay">TU</span>
+                <div class="hand-count"><i class="fas fa-clone"></i> <span id="myCount">7</span></div>
+            </div>
             <div id="myHand" class="hand"></div>
+            <button id="playMultiBtn" class="hidden" onclick="game.confirmMultiPlay()">GIOCA SELEZIONATE</button>
+        </div>
+
+        <div id="colorPicker" class="overlay">
+            <div class="color-wheel">
+                <div class="c-slice r" onclick="game.resolveWild('red')"></div>
+                <div class="c-slice b" onclick="game.resolveWild('blue')"></div>
+                <div class="c-slice g" onclick="game.resolveWild('green')"></div>
+                <div class="c-slice y" onclick="game.resolveWild('yellow')"></div>
+            </div>
         </div>
     </div>
 
